<?xml version="1.0"?>
<package>
  <name>keyence_experimental</name>
  <version>0.1.0</version>
  <description>The keyence_experimental package</description>

  <maintainer email="jonathan.meyer@swri.org">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/ros-industrial/keyence_experimental</url>

  <author email="jonathan.meyer@swri.org">Jonathan Meyer</author>
  <author email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <author email="West_Matthew_T@cat.com">Matthew West</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
