<?xml version="1.0"?>
<package format="2">
  <name>keyence_experimental</name>
  <version>0.1.0</version>
  <description>The keyence_experimental package</description>

  <maintainer email="jonathan.meyer@swri.org">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/ros-industrial/keyence_experimental</url>

  <author email="jonathan.meyer@swri.org">Jonathan Meyer</author>
  <author email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <author email="West_Matthew_T@cat.com">Matthew West</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>libsocket</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
